# platform.core.multimedia.media-server

./: 30_media-server-add.post  AUTHORS  Makefile.am  autogen.sh  config.in  configure.ac  libmedia-utils.pc.in  media-server.manifest  media_content_config.ini  project.config  reset_mediadb.sh
TC/: _export_env.sh  _export_target_env.sh  build.sh  execute.sh  tet_scen  tetbuild.cfg  tetclean.cfg  tetexec.cfg  tslist.txt
TC/utc/: .cproject  .project  Makefile  tslist  utc_media_file_register.c  utc_media_file_register.h  utc_ms_noti_update_complete.c  utc_ms_noti_update_complete.h
common/: media-server-common.c  media-server-db-svc.c  media-server-db.c  media-server-dbus.c  media-server-drm.c  media-server-external-storage.c  media-server-hibernation.c  media-server-inotify-internal.c  media-server-inotify.c  media-server-main.c  media-server-scan-internal.c  media-server-scan.c  media-server-scanner.c  media-server-socket.c  media-server-thumb.c  media-server-utils.c  mediadb-update.c
common/include/: media-server-common.h  media-server-db-svc.h  media-server-dbus-type.h  media-server-dbus.h  media-server-error.h  media-server-external-storage.h  media-server-global.h  media-server-hibernation.h  media-server-inotify-internal.h  media-server-inotify.h  media-server-scan-internal.h  media-server-scan.h  media-server-scanner.h  media-server-socket.h  media-server-thumb.h  media-server-types.h  media-server-utils.h
common/scanner/: media-scanner-db-svc.c  media-scanner-drm.c  media-scanner-scan.c  media-scanner-socket.c  media-scanner-utils.c  media-scanner.c
common/scanner/include/: media-scanner-db-svc.h  media-scanner-dbg.h  media-scanner-drm.h  media-scanner-socket.h  media-scanner-utils.h
data/: mediasvr
data-media/dbspace/file-manager-service/: plugin-config
data-media/dbspace/file-manager-service/.thumb/mmc/: MMC_THUMB_HERE
dbus/: media-server.conf
debian/: changelog  control  libmedia-utils-dev.install.in  libmedia-utils.install.in  media-server.install.in  media-server.postinst.in  prerm.in  rules
lib/: media-util-cynara.c  media-util-db.c  media-util-dcm.c  media-util-ipc.c  media-util-noti-internal.c  media-util-noti.c  media-util-register.c
lib/include/: .media-util-register.h.swp  media-server-ipc.h  media-util-cynara.h  media-util-db.h  media-util-dbg.h  media-util-dcm.h  media-util-err.h  media-util-internal.h  media-util-ipc.h  media-util-noti-common.h  media-util-noti-internal.h  media-util-noti.h  media-util-register.h  media-util.h
packaging/: media-data-sdk_create_db.sh  media-server-user.path  media-server-user.service  media-server.changes  media-server.manifest  media-server.service  media-server.spec
po/: ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  lo.po  lt.po  (+39 more)
src/: mediadb-update.c
src/common/: media-common-db-svc.c  media-common-drm.c  media-common-external-storage.c  media-common-system.c  media-common-utils.c
src/common/include/: media-common-db-svc.h  media-common-dbg.h  media-common-drm.h  media-common-external-storage.h  media-common-system.h  media-common-types.h  media-common-utils.h
src/scanner/: media-scanner-db-svc.c  media-scanner-device-block.c  media-scanner-scan.c  media-scanner-socket.c  media-scanner.c
src/scanner-v2/: media-scanner-common-v2.c  media-scanner-device-block-v2.c  media-scanner-extract-v2.c  media-scanner-scan-v2.c  media-scanner-socket-v2.c  media-scanner-v2.c
src/scanner-v2/include/: media-scanner-common-v2.h  media-scanner-dbg-v2.h  media-scanner-device-block-v2.h  media-scanner-extract-v2.h  media-scanner-scan-v2.h  media-scanner-socket-v2.h
src/scanner/include/: media-scanner-db-svc.h  media-scanner-dbg.h  media-scanner-device-block.h  media-scanner-scan.h  media-scanner-socket.h
src/server/: media-server-db-svc.c  media-server-db.c  media-server-dcm.c  media-server-device-block.c  media-server-main.c  media-server-scanner.c  media-server-socket.c  media-server-thumb.c
src/server/include/: media-server-db-svc.h  media-server-db.h  media-server-dbg.h  media-server-dcm.h  media-server-device-block.h  media-server-scanner.h  media-server-socket.h  media-server-thumb.h
